# mercury

./: .gitignore  README.md  build.py  pyproject.toml  setup.py  test.json
asgi/: main.py
atest/main/: route.py
mercury/: __init__.py
mercury/conf/: global_settings.py
mercury/core/: exception.py
mercury/core/application/: base.py
mercury/core/management/: __init__.py  base.py  template.py
mercury/core/management/command/: startproject.py
mercury/core/request/: base.py
mercury/core/route/: __init__.py  conf.py  route.py  router.py
mercury/core/server/: __init__.py  config.py  event.py  lifespan.py  server.py
mercury/core/server/lifespan/: on.py
mercury/core/server/protocol/: __init__.py  http.py  utils.py
mercury/core/server/protocol/http/: __init__.py  auto.py  base.py  h11.py  httptool.py
mercury/core/server/protocol/http/parser/: cparser.pxd  error.py  parser.pyx  python.pxd
mercury/core/server/protocol/parser/: __init__.py  cparser.pxd  parser.c  parser.pyx  python.pxd
mercury/core/view/: __init__.py  base.py
mercury/template/project_template/main/: route.py-tpl  setting.py-tpl
mercury/type/: __init__.py  server.py
mercury/utils/: functional.py  importer.py  log.py  terminal_color.py  version.py
test/: __init__.py  main.py
