[project]
name = "planet-mercury"
version = "0.0.3"
description = "An Async Python Web Framework and Server in Planets Plan."
authors = [
    {name = "RyomaHan", email = "ryomahan1996@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mercury = "mercury.core.management:execute_from_command_line"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0", "Cython>=0.29.32"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.build]
setup-script = "build.py"
run-setuptools = true

[tool.pdm.dev-dependencies]
dev = [
    "Cython>=0.29.32",
]
